retrieveUnpackaged/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Contributions__c</fullName>
        <label>Cash Contributions</label>
        <summarizedField>Cost_Share_Review__c.Cash_Contributions__c</summarizedField>
        <summaryForeignKey>Cost_Share_Review__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contributions__c</fullName>
        <formula>Cash_Contributions__c +  In_Kind_Contributions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_Cost_Share_Amount__c</fullName>
        <formula>Project_Agreement_Amount__c -  NFS_Cost_Share_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Cost Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contributions__c</fullName>
        <label>In Kind Contributions</label>
        <summarizedField>Cost_Share_Review__c.In_Kind_Contributions__c</summarizedField>
        <summaryForeignKey>Cost_Share_Review__c.Agreement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Master_Project_ID__c</fullName>
        <formula>Project__r.Master_Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFS_Cost_Share_Amount__c</fullName>
        <formula>Project_Agreement_Amount__c  *  NFS_Cost_Share_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NFS Cost Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NFS_Cost_Share_Percentage__c</fullName>
        <label>NFS Cost Share Percentage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Sponsor__c</fullName>
        <label>Non-Federal Sponsor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Non_Federal_Sponsor_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <label>Organization Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type_s__c</fullName>
        <label>Organization Type(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Original</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Agreement_Amount__c</fullName>
        <label>Project Agreement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remedial Investigation</fullName>
                </value>
                <value>
                    <fullName>Feasibility Study</fullName>
                </value>
                <value>
                    <fullName>Pre-Design Investigation</fullName>
                </value>
                <value>
                    <fullName>Remedial Design</fullName>
                </value>
                <value>
                    <fullName>Remedial Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remediation</fullName>
                </value>
                <value>
                    <fullName>Monitor/Evaluate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site_Project_Code__c</fullName>
        <label>Site/Project Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Agreement ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Amendment</fullName>
        <active>true</active>
        <label>Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Original</fullName>
        <active>true</active>
        <label>Original</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>